product page spacing fixed

--- a/app/design/frontend/Homescapes/Develop/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Homescapes/Develop/Magento_Catalog/web/css/source/_module.less
@@ -177,6 +177,7 @@
             .lib-css(color, @product-info-price);
             display: table;
             width: 100%;
+			margin-bottom: 1rem;
 
             .price-box {
                 display: block;
