--- a/app/design/frontend/Homescapes/Develop/web/css/source/_extend.less
+++ b/app/design/frontend/Homescapes/Develop/web/css/source/_extend.less
@@ -2613,7 +2613,6 @@ transition: all 5ms ease-in-out 0s;
 	padding: 0;
 	display: none;
 	float: left;
-	margin-top: .5rem;
 
 	@media @992{
 		display: block;
@@ -3213,7 +3212,7 @@ transition: all 5ms ease-in-out 0s;
 .product.info.detailed{
 	width: 50%;
 	float: left;
-	margin-bottom: 1rem !important;
+	margin-bottom: 3rem !important;
 	
 	@media @991{
 		width: 100%;
@@ -3286,7 +3285,7 @@ transition: all 5ms ease-in-out 0s;
 	max-height: 103rem;
 	overflow: hidden;
 	overflow-y: auto;
-	margin-bottom: 2rem;
+	margin-bottom: 3rem;
 	
 	@media @991{
 		width: 100%;
@@ -4017,6 +4016,7 @@ transition: all 5ms ease-in-out 0s;
 
 	float: left;
 	width: 100%;
+	margin-bottom: 1.5rem;
 		
 	.stock{
 		border: none;
@@ -6024,6 +6024,12 @@ transition: all 5ms ease-in-out 0s;
 		  background: #f0f0f0;
 		  float: left;
 		  height: 56px;
+		 
+		 @media @767{
+			 margin: .5rem;
+			 width: auto;
+			 min-width: 6rem;
+		 }
 		 
 		 img{
 			  float: left;
@@ -8252,6 +8258,7 @@ transition: all 5ms ease-in-out 0s;
 .amfaq-product-tab{
 	float: left;
 	width: 100%;
+	margin-bottom: 3rem;
 	
 	.block-title{
 		text-align: center;
@@ -8501,6 +8508,7 @@ transition: all 5ms ease-in-out 0s;
 				width: 46%;
 				margin-right: 2%;
 				margin-left: 1.8%;
+				margin-bottom: 2rem;
 				
 				label{
 					margin-bottom: .6rem !important;
@@ -8538,7 +8546,7 @@ transition: all 5ms ease-in-out 0s;
 			border: 1px solid @dlight;
 		}
 		.custom-width-drop-group{
-			height: 4.2rem;
+			height: 5.1rem;
 			overflow: hidden;
 		}
 		.custom-width-drop-group.width-drop-content{
